examples/test/testpolicy952.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy952
  namespace: namespace443
spec:
  podSelector:
    matchLabels:
      key4: value43
      key43: value4
      key44: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value37
      podSelector:
        matchLabels:
          key18: value1
          key39: value20
          key1: value46
